# NitrogenRefrigerator

./: README.md  document.json
NitrogenRefrigerator/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
NitrogenRefrigerator/CellContainer/: cellcontainer.cpp  cellcontainer.h  jsonStorage.cpp  jsonStorage.h
NitrogenRefrigerator/Gui/: nitrogenrefrigoratorguimodel.cpp  nitrogenrefrigoratorguimodel.h
NitrogenRefrigeratorTest/: CMakeLists.txt  main.cpp  tst_NitrogenRefrigeratorTest.h  tst_ttt.h
NitrogenRefrigeratorTest/CellContainerTest/: cellContainerTest.h  jsonStorageTest.h
